<resources>
    <string name="app_name">AntiCalculadora</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="play">Jugar</string>
    <string name="ranking">Ranking</string>
    <string name="settings">AJUSTES</string>
    <string name="exit">Salir</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="game">Game</string>
    <string name="level">Nivel</string>
    <string name="anti">ANTI</string>
    <string name="calculator">CALCULADORA</string>
    <string name="go">GO!</string>
    <string name="allowedOperators">Operadores que debes usar:</string>
    <string name="userLostTitle">HAS PERDIDO!!!</string>
    <string name="retry">REINTENTAR</string>
    <string name="userWon">Felicitaciones, has logrado completar tu mision.</string>
    <string name="userWonTitle">FELICITACIONES, HAS GANADO!!!</string>
    <string name="goOn">Continuar</string>
    <string name="statistics">ESTADÍSTICAS</string>
    <string name="gamesPlayed">Partidas jugadas</string>
    <string name="wonGames">Partidas ganadas</string>
    <string name="lostGames">Partidas perdidas</string>
    <string name="maxLevel">Nivel máximo alcanzado</string>
    <string name="levelsCompleted">Felicitaciones, has completado el juego. Si quieres volver a intentarlo por favor dale a continuar</string>
</resources>
