<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

   <ImageView
       app:layout_widthPercent="100%"
       app:layout_heightPercent="100%"
       android:src="@drawable/backgrounddd"
       android:scaleType="centerCrop">
   </ImageView>

    <ImageView
        app:layout_widthPercent="100%"
        app:layout_heightPercent="100%"
        android:src="@drawable/background3"
        android:alpha="0.1"
        android:scaleType="centerCrop">
    </ImageView>

    <RelativeLayout
        app:layout_widthPercent="100%"
        app:layout_heightPercent="50%"
        android:id="@+id/header_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                fontPath="fonts/Jelly Crazies.ttf"
                android:id="@+id/antiTV"
                android:text="@string/anti"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/antiTV"
                android:id="@+id/calculatorTV"
                fontPath="fonts/Jelly Crazies.ttf"
                android:text="@string/calculator"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/calculatorTV"
                android:src="@drawable/kids_math"/>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.percent.PercentRelativeLayout
        app:layout_widthPercent="100%"
        app:layout_heightPercent="50%"
        android:layout_below="@+id/header_container"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <ImageView
            app:layout_widthPercent="15%"
            app:layout_heightPercent="20%"
            android:id="@+id/arrow"
            android:src="@drawable/flecha_naranja"
            android:layout_toLeftOf="@+id/play"
            />

        <Button
            app:layout_widthPercent="55%"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/play"
            android:layout_marginLeft="6dp"
            android:background="@drawable/oval_button"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/play">

        </Button>

        <Button
            app:layout_widthPercent="55%"
            android:layout_height="wrap_content"
            android:id="@+id/ranking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/play"
            android:background="@drawable/oval_button"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/ranking">

        </Button>

        <Button
            app:layout_widthPercent="55%"
            android:layout_height="wrap_content"
            android:id="@+id/settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/ranking"
            android:background="@drawable/oval_button"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/settings">

        </Button>

        <Button
            app:layout_widthPercent="55%"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/settings"
            android:background="@drawable/oval_button"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/exit">

        </Button>

    </android.support.percent.PercentRelativeLayout>




</android.support.percent.PercentRelativeLayout>