<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgrounddd"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/statistics"
        fontPath="fonts/Jelly Crazies.ttf" />

    <RelativeLayout
        app:layout_widthPercent="80%"
        app:layout_heightPercent="60%"
        android:layout_centerInParent="true"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:background="#ffffff"
        android:alpha="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gamesPlayed"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/gamesPlayed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/cantPlayedGames"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gamesPlayed"
            android:id="@+id/wonGames"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/wonGames" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cantWonGames"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:layout_below="@+id/cantPlayedGames"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wonGames"
            android:id="@+id/lostGames"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/lostGames" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/cantWonGames"
            android:id="@+id/cantLostGames"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lostGames"
            android:id="@+id/maxLevel"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/maxLevel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/cantLostGames"
            android:id="@+id/maxLevelValue"
            android:text="-"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>