<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgrounddd"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomNumberTV"
        android:textSize="35sp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/settings"
        fontPath="fonts/Jelly Crazies.ttf"/>

    <RelativeLayout
        app:layout_widthPercent="80%"
        app:layout_heightPercent="60%"
        android:layout_centerInParent="true"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:background="#ffffff"
        android:alpha="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/musicTV"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/music"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/musicSwitcher"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/musicTV"
            android:id="@+id/soundsTV"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/sounds"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/soundsSwitcher"
            android:layout_below="@id/musicSwitcher"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/soundsTV"
            android:id="@+id/vibrationTV"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/vibration"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/soundsSwitcher"
            android:id="@+id/vibrationSwitcher"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>